re PR c++/56971 (GCC claims a friend function to be overloaded, but it isn't)

PR c++/56971
	* pt.c (any_template_arguments_need_structural_equality_p): A
	TEMPLATE_TEMPLATE_PARM can require structural type comparison.

From-SVN: r199315